[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# Solana client & types (same major as your CLI – 1.17 is a safe choice)
solana-client = "1.17.0"
solana-sdk = "1.17.0"

# Redis + Postgres
redis = { version = "0.24", features = ["tokio-comp"] }
deadpool-postgres = "0.12"
tokio-postgres = "0.7"

# HTTP server (for REST + WebSockets later)
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
